--- a/frontend/src/app/pages/activity-reports/activity-reports-admin/activity-reports-admin.component.html
+++ b/frontend/src/app/pages/activity-reports/activity-reports-admin/activity-reports-admin.component.html
@@ -1,43 +1,1 @@
-<div class="activity-report-container">
-  <h1>Activity Reports - Admin</h1>
-
-  <div class="container">
-    <!-- Calendar Section (left side) -->
-    <div class="calendar-section">
-      <table class="calendar">
-        <thead>
-        <tr>
-          <th *ngFor="let day of weekDays">{{ day }}</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr *ngFor="let week of calendar">
-          <td
-            *ngFor="let cell of week"
-            [class.today]="cell.isToday"
-            [class.selected]="cell.isSelected"
-            (click)="onDayClicked(cell.date)"
-          >
-            <div class="day-content">
-              <span>{{ cell.date.getDate() }}</span>
-            </div>
-          </td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
-
-    <!-- Activity Details Section (right side) -->
-    <div class="activity-details" *ngIf="selectedDate">
-      <h2>Activities on {{ selectedDate | date: 'longDate' }}</h2>
-      <ul *ngIf="activities.length > 0; else noActivities">
-        <li *ngFor="let activity of activities">
-          {{ activity.description }} ({{ activity.hours }} hours)
-        </li>
-      </ul>
-      <ng-template #noActivities>
-        <p>No activities recorded for this day.</p>
-      </ng-template>
-    </div>
-  </div>
-</div>
+svd lvk
