--- a/frontend/src/app/pages/activity-reports/activity-reports-employee/activity-reports-employee.component.html
+++ b/frontend/src/app/pages/activity-reports/activity-reports-employee/activity-reports-employee.component.html
@@ -1,1 +1,3 @@
-<p>activity-reports-employee works! lalala</p>
+<div class="calendar-content">
+    <full-calendar [options]="calendarOptions"></full-calendar>
+</div>
