--- a/frontend/src/app/pages/activity-reports/activity-reports-employee/activity-reports-employee.component.scss
+++ b/frontend/src/app/pages/activity-reports/activity-reports-employee/activity-reports-employee.component.scss
@@ -12,3 +12,14 @@
   display: inline-block;
   padding: 2px 4px;
 }
+
+:host ::ng-deep .button-container {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+:host ::ng-deep .p-dialog-footer {
+  padding-top: 1rem;
+}
