Adding activity report functionality for admin

--- a/frontend/src/app/pages/activity-reports/activity-reports-admin/activity-reports-admin.component.html
+++ b/frontend/src/app/pages/activity-reports/activity-reports-admin/activity-reports-admin.component.html
@@ -1,1 +1,20 @@
-svd lvk
+<div class="calendar-content">  <full-calendar [options]="calendarOptions"></full-calendar></div>
+
+<!-- Summary Row -->
+<div class="summary-row">
+  <div *ngFor="let resource of resources" class="summary-cell">
+    <strong>{{ resource.title }}</strong>
+    <div *ngIf="employeeDailyTotals[resource.id + '_' + currentDate] as totals">
+      Total for {{ currentDate }}:
+      {{ totals.hours || 0 }}h
+      {{ totals.minutes || 0 }}m
+    </div>
+    <div *ngIf="!employeeDailyTotals[resource.id + '_' + currentDate]">
+      No work recorded for {{ currentDate }}.
+    </div>
+  </div>
+</div>
+
+
+
+
