make final adjustments (fix top-bar, date formats, descriptions with text area)
remove another useless things

remove useless stuff

--- a/frontend/src/app/pages/activity-reports/activity-reports-admin/activity-reports-admin.component.html
+++ b/frontend/src/app/pages/activity-reports/activity-reports-admin/activity-reports-admin.component.html
@@ -10,7 +10,7 @@
       {{ totals.minutes || 0 }}m
     </div>
     <div *ngIf="!employeeDailyTotals[resource.id + '_' + currentDate]">
-      No work recorded for {{ currentDate }}.
+      No work recorded.
     </div>
   </div>
 </div>
