--- a/frontend/src/app/shared/top-bar/top-bar.component.html
+++ b/frontend/src/app/shared/top-bar/top-bar.component.html
@@ -26,8 +26,10 @@
         </p>
       </div>
       <hr />
-      <button pButton label="My Account" (click)="goToProfile()" class="p-button-text"></button>
-      <button pButton label="Logout" icon="pi pi-sign-out" (click)="logout()" class="p-button-text"></button>
+<!--      <button pButton label="My Account" (click)="goToProfile()" class="p-button-text"></button>-->
+      <div style="display: flex; align-items: center; justify-content: center">
+        <button pButton label="Logout" icon="pi pi-sign-out" (click)="logout()" class="p-button-text"></button>
+      </div>
     </p-overlayPanel>
   </div>
 </div>
