--- a/frontend/src/app/pages/dashboard/administrator-dashboard/administrator-dashboard.component.html
+++ b/frontend/src/app/pages/dashboard/administrator-dashboard/administrator-dashboard.component.html
@@ -14,6 +14,7 @@
       [rows]="5"
       [tableStyle]="{ 'min-width': '80%' }"
       [rowsPerPageOptions]="[5, 10]"
+      [globalFilterFields]="['firstName', 'lastName', 'email', 'telefonNumber', 'signingDate']"
       editMode="row"
     >
       <ng-template pTemplate="caption">
@@ -25,7 +26,7 @@
 
           <!-- Right-aligned search bar and button -->
           <div style="display: flex; align-items: center; gap: 1rem;">
-            <div class="p-input-icon-left">
+            <span class="p-input-icon-left ml-auto">
               <i class="pi pi-search"></i>
               <input
                 pInputText
@@ -34,7 +35,7 @@
                 (input)="dt1?.filterGlobal(searchValue, 'contains')"
                 placeholder="Search keyword"
               />
-            </div>
+            </span>
             <button pButton icon="pi pi-plus" label="Add Employee" (click)="showDialog = true"></button>
           </div>
         </div>
@@ -177,7 +178,7 @@
           </p-cellEditor>
         </td>
 
-        <td>{{ employee.signingDate | date: 'MM/dd/yyyy'}}</td>
+        <td>{{ employee.signingDate | date: 'dd/MM/yyyy'}}</td>
         <td>
           <p-cellEditor>
             <ng-template pTemplate="input">
@@ -233,7 +234,7 @@
     </ng-template>
     <ng-template pTemplate="emptymessage">
       <tr>
-        <td colspan="7">No customers found.</td>
+        <td colspan="7">No employees found.</td>
       </tr>
     </ng-template>
   </p-table>
@@ -310,7 +311,7 @@
           [showOnFocus]="false"
           [minDate]="minDate"
           [maxDate]="maxDate"
-          dateFormat="mm/dd/yy"
+          dateFormat="dd/mm/yy"
           required
         ></p-calendar>
         <small *ngIf="employeeForm.submitted && !newEmployee.signingDate" class="p-error">Signing date is required.</small>
